--- a/html/index.html
+++ b/html/index.html
@@ -140,6 +140,7 @@ body, html {
   <p>Trailer loading</p>
   <p>Behavior Issues</p>
   <p>Troubleshooting</p>
+  <p>Pre-purchase inspection</p>
   <p>Individual owners, horse facilities, resorts, retreat centers, camps…</p>
 </div>
 
