--- a/html/index.html
+++ b/html/index.html
@@ -138,7 +138,7 @@ body, html {
   <p>Equine health</p>
   <p>Safety standards</p>
   <p>Trailer loading</p>
-  <p>Behavior Issues</p>
+  <p>Behavior issues</p>
   <p>Troubleshooting</p>
   <p>Pre-purchase inspection</p>
   <p>Individual owners, horse facilities, resorts, retreat centers, camps…</p>
